Fixes and enhancements in valves